index.css
:root{
  --color-1: #FF6060;
  --color-2: #F6F6F6;
  --color-3: #000000;
  --color-4: #FFFFFF;
}

@font-face {
  font-family: Montserrat-medium;
  src: url(./src//assets/fonts/Montserrat-Medium.ttf);
}
@font-face {
  font-family: Montserrat-bold;
  src: url(./src/assets/fonts/Montserrat-Bold.ttf);
}

*{
  margin: 0;
  padding: 0;
  font-family: Montserrat-medium, Arial, Helvetica, sans-serif;
}

.app{
  display: flex;
  flex-flow: column nowrap;
  gap: 2rem;
}

/*========================================*/
/*                HEADER                  */
/*========================================*/

.header{
  padding: 2rem 7% 0rem;
  display: flex;
  justify-content: space-between;
  align-items: center;
}
.nav{
  display: flex;
  justify-content: space-between;
  gap: 1rem;
}
.link{
  color: var(--color-1);
  text-decoration: none;
}
.link:hover{
  text-decoration: underline;
}
.logo-kasa {
  width: clamp(9rem, 40vw, 20rem);
}


/*========================================*/
/*               PAGE HOME                */
/*========================================*/

.home-main{
  padding: 0 7%;
  display: flex;
  flex-flow: column nowrap;
  gap: 2rem;
}


/*========     BANNER     ========*/

.banner{
  position: relative;
  box-sizing: border-box;
  height: 222px;
  width: 100%;
}
.banner__picture{
  z-index: 1;
  height: 100%;
  width: 100%;
  object-fit: cover;
  border-radius: 15px;
}
.banner__shade{
  position: absolute;
  top:0;
  z-index: 2;
  height: 100%;
  width: 100%;
  border-radius: 15px;
  background-color: rgba(0,0,0,0.3);
}
.banner__text{
  z-index: 3;
  position: absolute;
  top: 40%;
  color: var(--color-4);
  font-size: 2.5rem;
  text-align: center;
  width: 100%;
}


/*========     MAIN     ========*/

.main{
  display: flex;
  flex-flow: row wrap;
  justify-content: space-between;
  gap: 2rem;
  padding: 2rem;
  background-color: var(--color-2);
  border-radius: 15px;
}

.card{
  position: relative;
  min-width: 250px;
  width: 100%;
  max-width: 350px;
  height: 300px;
  border-radius: 20px;
  background-color: var(--color-1);
  box-sizing: border-box;
  overflow: hidden;
}
.card-image{
  position: relative;
  z-index: 1;
  object-fit: cover;
  height: 100%;
  width: 100%;
}
.card-shade{
  position: absolute;
  z-index: 2;
  height: 100%;
  width: 100%;
  top: 0;
  background: linear-gradient(0deg, rgba(0,0,0,1) 0%, rgba(255,255,255,0) 37%, rgba(255,255,255,0) 100%);
}
.card-text{
  z-index: 3;
  position: absolute;
  bottom: 20px;
  left: 20px;
  width: 85%;
  color: var(--color-4);
}

/*========================================*/
/*               PAGE LODGING             */
/*========================================*/
.lodging-main{
  display: flex;
  flex-flow: column;
  gap: 1rem;
  padding: 2em;
}
.lodging-bloc-1-and-2 {
  display: flex;
  justify-content: space-between;
  gap: 1em;
}
.lodging-information{
  display: flex;
  flex-flow:column nowrap;
  gap: 1rem;
}

/*===== LODGING BLOC 1 =====*/
.lodging-bloc-1 {
  display: flex;
  flex-flow: column;
  gap: .5rem;
}
.lodging-title{
  color: var(--color-1);
  font-size: 2.5rem;
}
.lodging-location{
  color: var(--color-1);
  font-size: 1rem;
}
.lodging-tags-container{
  display: flex;
  flex-flow: row wrap;
  gap: 1rem;
}
.lodging-tag{
  background-color: var(--color-1);
  padding: .3rem 1.5rem;
  border-radius: 12px;
  color: var(--color-4);
}

/*===== LODGING BLOC 2 =====*/
.lodging-bloc-2 {
  display: flex;
  flex-flow: column;
  gap: 1em;
}
.lodging-host{
  display: flex;
}
.lodging-host-name{
  color: var(--color-1);
  white-space: break-spaces;
  width: 52%;
  text-align: right;
  padding: 0rem 1rem;
}
.lodging-host-picture{
  border-radius: 50%;
  object-fit: contain;
  height: 70px;
  height: 70px;
}
.lodging-stars {
  display: flex;
  justify-content: flex-end;
}

/*===== LODGING COLLAPSE =====*/
.lodging-collapses{
  display: flex;
  flex-flow: row nowrap;
  gap: 2rem;
}

/*===== GALLERY =====*/
.gallery{
  display: flex;
  flex-flow: column;
  z-index: 1;
  position: relative;
  height: 415px;
  overflow: hidden;
  box-sizing: border-box;
  border-radius: 15px;
}

.gallery-image{
  position: absolute;
  z-index: 4;
  opacity: 0;
  height: 100%;
  width: 100%;
  object-fit: cover;
  transition: all 0.5s ease-out;
}

.gallery-counter {
  position: absolute;
  z-index: 10;
  bottom: 5px;
  transform: translate(50%);
  left: 50%;
  color: white;
}

.chevron-left{
  z-index: 10;
  position: absolute;
  top: 50%;
  left: 0px;
  height: 4vw;
  transform: rotate(270deg);
  cursor: pointer;
}
.chevron-right{
  z-index: 10;
  position: absolute;
  top: 50%;
  right: 0px;
  height: 4vw;
  transform: rotate(90deg);
  cursor: pointer;
}
.active{
  opacity: 1;
}

/*========================================*/
/*               PAGE ABOUT               */
/*========================================*/
.about-main{
  display: flex;
  flex-flow: column nowrap;
  align-items: center;
  justify-content: center;
  width: 80%;
  margin: auto;
}

/* You can find the banner in the banner sub part */

.about-collapse-container{
  display: flex;
  flex-flow: column nowrap;
  justify-content: center;
  align-items: center;
  gap: 1rem;
  width: 100%;
  max-width: 1024px;
  padding: 2rem 0rem;
}
.collapse{
   width: 100%;
}
.collapse-bar{
  display: flex;
  flex-flow: row nowrap;
  justify-content: space-between;
  align-items: center;
  background-color: var(--color-1);
  border-radius: 5px;
  padding: .5rem;
}
.collapse-title{
  color: var(--color-4);
  font-size: 1.3rem;
}
.collapse-list{
  list-style: none;
  background-color: var(--color-2);
  padding: .5rem;
}
.chevron-down{
  height: 10px;
  transform: rotate(180deg);
  cursor: pointer;
}
.chevron-up{
  height: 10px;
  cursor: pointer;
}
.collapse-text{
  background-color: var(--color-2);
  border-radius: 5px 0px;
  padding: .5rem;
}

/*========================================*/
/*               PAGE 404                 */
/*========================================*/

.main-404{
  display: flex;
  flex-flow: column nowrap;
  align-items: center;
  justify-content: space-evenly;
  gap: 2rem;
  height: 412px;
}

.title-404{
  font-family: Montserrat-bold, Arial, Helvetica, sans-serif;
  color: var(--color-1);
  font-size: 10rem;
}
.text-404{
  color: var(--color-1);
  font-size: 1.5rem;
}


/*========================================*/
/*                FOOTER                  */
/*========================================*/

.footer{
  display: flex;
  justify-content: center;
  align-items: center;
  background-color: var(--color-3);
  color: var(--color-4);
  height: 210px;
}
.footer-container{
  display: flex;
  flex-flow: column nowrap;
  align-items: center;
  gap: 2rem;
}

@keyframes fade {
  0%{
    opacity: 0;
  }
  100%{
    opacity: 1;
  }
}

@media screen and (max-width: 748px){
  .logo-kasa {
    width: clamp(9rem, 40vw, 20rem);
  }
  
  .lodging-bloc-1-and-2{
    flex-flow: column;
  }
  .lodging-bloc-1{}
  .lodging-bloc-2{
    flex-flow: row-reverse nowrap;
    justify-content: space-between;
  }
  .lodging-collapses{ flex-flow: column nowrap; }
}
@media screen and (max-width: 420px){
  .logo-kasa {
    width: clamp(4rem, 20vw, 20rem);
  }
}

